--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,4 +14,5 @@ body {
   @apply bg-primary-dark-blue/10 text-primary-white tracking-wider;
   font-family: var(--font-source-sans-3), sans-serif;
   text-shadow: var(--text-shadow-sm);
+  overflow-x: hidden;
 }
